# HANDSHAKE

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md
.github/workflows/: ci.yml
docs/: FEATURES_TESTING.md  architecture.md  feature_flags.md  gui_flows.md  testing.md  transport_matrix.md
src/: api.rs  api_offer.rs  chunk.rs  config.rs  crypto.rs  derive.rs  lib.rs  main.rs  offer.rs  onion.rs  phrase.rs  prelude.rs  protocol.rs  protocol_assist.rs  protocol_assist_v5.rs  resume.rs  session_noise.rs  state.rs
src/cli/: onionize.rs
src/crypto/: post_quantum.rs  replay.rs
src/security/: mod.rs  rate_limiting.rs  time_validation.rs
src/state/: connection_manager.rs  metrics.rs
src/tor/: managed.rs
src/transport/: assist_inbox.rs  dandelion.rs  framing.rs  guaranteed.rs  ice.rs  icmp_hole_punch.rs  io.rs  lan.rs  mod.rs  multipath.rs  nat_detection.rs  noise_tun.rs  pluggable.rs  quic_rfc9000.rs  stealth.rs  stun.rs  tasks.rs  tcp_hole_punch.rs  wan.rs  wan_assist.rs  wan_direct.rs  wan_tor.rs  webrtc.rs
src/transport/pluggable/: http2_mimic.rs  mimicry.rs  quic_mimic.rs  real_tls.rs  ws_mimic.rs
src/transport/wan_assist/: coordination.rs
tests/: high_level_crypto.rs  high_level_noise.rs  high_level_offer.rs  high_level_quic.rs  high_level_webrtc.rs
ui/: README.md  package.json
ui/src/: App.tsx  styles.css
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/src/: main.rs
